add dough logic, include user initiative and put reset slots after total_order_add

--- a/dev/data/nlu/nlu_general.yml
+++ b/dev/data/nlu/nlu_general.yml
@@ -42,7 +42,7 @@ nlu:
     - thanks buddy
     - thanks bot
     - thanks Mr. Bot
-
+    - thanks Leo
     
 - intent: faq/ask_bot_tasks
   examples: |
