--- a/dev/data/nlu/nlu_general.yml
+++ b/dev/data/nlu/nlu_general.yml
@@ -113,7 +113,7 @@ nlu:
     - is it cold if we sit outside
 
 
-- intent: faq/whats_my_order
+- intent: whats_my_order
   examples: |
     - can you repeat my order so far?
     - whats my order
