--- a/dev/domain.yml
+++ b/dev/domain.yml
@@ -8,6 +8,7 @@ intents:
 - goodbye
 - greet
 - out_of_scope
+- whats_my_order
 # table booking
 - book_table
 - book_event
@@ -122,7 +123,6 @@ forms:
     - pizza_type
     - pizza_size
     - dough
-    - client_name
   
   table_booking_form:
     required_slots:
@@ -164,6 +164,7 @@ actions:
 - action_pizza_type_information
 - action_pizza_size_information
 - action_dough_information
+- action_order_information
 # validation action
 - action_validate_slot_mappings
 
@@ -171,7 +172,7 @@ responses:
   utter_greet:
   - text: Welcome to DoughVinci, where art meets appetite. How can I assist you today?
   utter_goodbye:
-  - text: Bye
+  - text: Thank you for considering DoughVinci - where art meets appetite. Goodbye and see you soon!
   utter_youre_welcome:
   - text: No Problem! Let me know if I can help you with anything else.
   - text: You're welcome! If I can help you with something else, just let me know.
@@ -181,9 +182,6 @@ responses:
   - text: I am Leo, DoughVinci's assistant with the aim to support the restaurant in taking orders for takeaway and making table bookings.
   utter_faq/ask_bot_tasks:
   - text: My tasks include taking orders for pizza and drinks for takeaway as well as making table bookings for our restaurant.
-  utter_faq/whats_my_order:
-  - text: So far, your order contains {order_readable}. What else can I do for you?
-  - text: For now your order includes {order_readable}. Is there anything else I can do?
   utter_faq/request_restaurant_location:
   - text: DoughVinci is located in Via dei Solteri 35, in Trento.
   utter_faq/dogs_allowed:
@@ -223,7 +221,7 @@ responses:
   utter_ask_inside_outside:
   - text: Do you want to sit inside or outside?
   utter_ask_client_name:
-  - text: DoughVinci requires a name to properly assign your request. Can you give me your name, please?
+  - text: OK! DoughVinci requires a name to properly assign your request. Can you give me your name, please?
   utter_event_information:
   - text: I'm sorry, your request for an event can't be handled directly here by me. Please call us under 0123456789, we are happy to help you with your request!
   - text: I'm sorry, I can't handle this request, but my colleagues can! Please call us under 0123456789 for your event!
@@ -234,9 +232,9 @@ responses:
   - text: Perfect, you're all set then!
   - text: Alright {client_name}, you're all set!
   utter_order_final:
-  - text: Your final order is {order_readable}. Thank you for your trust in DoughVinci's edible masterpieces. Your order will be ready for takeaway 30 minutes.
-  - text: Your final order is {order_readable}. Thank you for your trust in DoughVinci's edible masterpieces. Your order will be ready for takeaway 40 minutes.
-  - text: Your final order is {order_readable}. Thank you for your trust in DoughVinci's edible masterpieces. Due to high demand, your order will be ready for takeaway in 1 hour.
+  - text: Your final order is {order_readable}. Thank you for your trust in DoughVinci's edible masterpieces. Your order will be ready for takeaway 30 minutes - you can take it by saying your name and the ID 36896.
+  - text: Your final order is {order_readable}. Thank you for your trust in DoughVinci's edible masterpieces. Your order will be ready for takeaway 40 minutes - you can take it by saying your name and the ID 98673.
+  - text: Your final order is {order_readable}. Thank you for your trust in DoughVinci's edible masterpieces. Due to high demand, your order will be ready for takeaway in 1 hour - you can take it by saying your name and the ID 22478.
   utter_do_one_by_one:
   - text: Unfortunately I am just a small town assistant, living in a complex world. I cannot process multiple orders at once. Please give me your orders again one by one.
   utter_keep_dough:
@@ -246,3 +244,8 @@ session_config:
   carry_over_slots_to_new_session: true
 
 #TODO: add hard coded prices
+
+#TODO: what is my order logic differently in rules, story!
+# whats_my_order:
+  # - text: So far, your order contains {order_readable}. What else can I do for you?
+  # - text: For now your order includes {order_readable}. Is there anything else I can do?
