fix name logic and add all set and bye after deny in table booking

--- a/dev/data/rules/rules_table_booking.yml
+++ b/dev/data/rules/rules_table_booking.yml
@@ -43,3 +43,10 @@ rules:
   steps:
   - intent: book_event
   - action: utter_event_information
+
+- rule: No After Table Booking
+  steps:
+  - action: utter_table_slots
+  - intent: deny
+  - action: utter_all_set
+  - action: utter_goodbye
