--- a/dev/data/rules/rules_pizza_order.yml
+++ b/dev/data/rules/rules_pizza_order.yml
@@ -24,18 +24,37 @@ rules:
   - action: utter_anything_else
 
 
-#### sumit pizza order form by adding all to total_order, ask for more orders, no more orders
-- rule: Submit Pizza Form Finish Order
-  condition:
-  - active_loop: pizza_order_form
+# #### sumit pizza order form by adding all to total_order, ask for more orders, no more orders
+# - rule: Submit Pizza Form Finish Order
+#   condition:
+#   - active_loop: pizza_order_form
+#   steps:
+#   - action: pizza_order_form
+#   - active_loop: null
+#   - slot_was_set:
+#     - requested_slot: null
+#   - action: action_total_order_add
+#   - action: action_reset_slots
+#   - action: utter_anything_else
+#   - intent: deny
+#   - action: utter_ask_client_name
+
+- rule: Get User Name at the End of Pizza Order
   steps:
-  - action: pizza_order_form
-  - active_loop: null
-  - slot_was_set:
-    - requested_slot: null
-  - action: action_total_order_add
-  - action: action_reset_slots
+  - action: utter_ask_client_name
+  - intent: inform_client_name
+  - action: utter_all_set
+  - action: utter_order_final
+
+- rule: Deny Triggers Ask Name
+  steps:
   - action: utter_anything_else
+  - intent: deny
+  - action: utter_ask_client_name
+
+- rule: Order Info triggers Deny
+  steps:
+  - action: action_order_information
   - intent: deny
   - action: utter_ask_client_name
 
