--- a/dev/data/rules/rules_pizza_order.yml
+++ b/dev/data/rules/rules_pizza_order.yml
@@ -25,19 +25,19 @@ rules:
 
 
 #### sumit pizza order form by adding all to total_order, ask for more orders, no more orders
-- rule: Submit Pizza Form Finish Order
-  condition:
-  - active_loop: pizza_order_form
-  steps:
-  - action: pizza_order_form
-  - active_loop: null
-  - slot_was_set:
-    - requested_slot: null
-  - action: action_total_order_add
-  - action: action_reset_slots
-  - action: utter_anything_else
-  - intent: deny
-  - action: utter_ask_client_name
+# - rule: Submit Pizza Form Finish Order
+#   condition:
+#   - active_loop: pizza_order_form
+#   steps:
+#   - action: pizza_order_form
+#   - active_loop: null
+#   - slot_was_set:
+#     - requested_slot: null
+#   - action: action_total_order_add
+#   - action: action_reset_slots
+#   - action: utter_anything_else
+#   - intent: deny
+#   - action: utter_ask_client_name
 
 #### continues the form after bot challange
 - rule: Interruption in Pizza Form
